--- a/semantics.html
+++ b/semantics.html
@@ -38,7 +38,7 @@
         </p>
         <div>
           <img src="images/picture.jpg" alt="image" height="400px" width="600px">
-          <video src="video/joy.mkv" controls autoplay height="400px"></video>
+          <video src="https://www.youtube.com/watch?v=MpgaWm2pnNs" controls autoplay height="400px"></video>
         </div>
      </article>
      <article>
